--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -47,28 +47,28 @@ search:
 
 # Comment
 comment:
-    #disqus:  # enter disqus shortname here
-    #duoshuo: # enter duoshuo shortname here
-    #youyan: # enter youyan uid here
-    #facebook: # enter true to enable
-    #isso: # enter the domain name of your own comment isso server eg. comments.example.com
-    #changyan: # please fill in `appid` and `conf` to enable
-    #    appid:
-    #    conf:
-    #gitment:
-    #    owner: #your github ID
-    #    repo: #the repo to store comments
+    disqus:  # enter disqus shortname here
+    duoshuo: # enter duoshuo shortname here
+    youyan: # enter youyan uid here
+    facebook: # enter true to enable
+    isso: # enter the domain name of your own comment isso server eg. comments.example.com
+    changyan: # please fill in `appid` and `conf` to enable
+        appid:
+        conf:
+    gitment:
+        owner: #your github ID
+        repo: #the repo to store comments
         #Register an OAuth application, and you will get a client ID and a client secret.
-    #    client_id: #your client ID
-    #    client_secret: #your client secret
-    #livere: # enter livere uid here
-    #valine: # Valine Comment System https://github.com/xCss/Valine
-    #    on:  # enter true to enable
-    #    appId:  # enter the leancloud application appId here
-    #    appKey: # enter the leancloud application appKey here
-    #    notify: # enter true to enable <Mail notifier> https://github.com/xCss/Valine/wiki/Valine-%E8%AF%84%E8%AE%BA%E7%B3%BB%E7%BB%9F%E4%B8%AD%E7%9A%84%E9%82%AE%E4%BB%B6%E6%8F%90%E9%86%92%E8%AE%BE%E7%BD%AE
-    #    verify: # enter true to enable <Validation code>
-    #    placeholder: Just Do It # enter the comment box placeholder
+        client_id: #your client ID
+        client_secret: #your client secret
+    livere: # enter livere uid here
+    valine: # Valine Comment System https://github.com/xCss/Valine
+        on:  # enter true to enable
+        appId:  # enter the leancloud application appId here
+        appKey: # enter the leancloud application appKey here
+        notify: # enter true to enable <Mail notifier> https://github.com/xCss/Valine/wiki/Valine-%E8%AF%84%E8%AE%BA%E7%B3%BB%E7%BB%9F%E4%B8%AD%E7%9A%84%E9%82%AE%E4%BB%B6%E6%8F%90%E9%86%92%E8%AE%BE%E7%BD%AE
+        verify: # enter true to enable <Validation code>
+        placeholder: Just Do It # enter the comment box placeholder
 
 
 # Share
