--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "hexo-toc": "1.1.0",
+    "hexo-tag-instagram": "1.0.4",
+    "hexo-tag-twitter": "1.0.1"
   }
 }
